--- a/game.html
+++ b/game.html
@@ -18,7 +18,13 @@
 		cursor: none;
 	}
 	</style>
-	
+	<style>
+		@font-face {
+		  font-family: 'Menu';
+		  src: url('resources/fonts/divlit.ttf');
+		}
+	</style>
+	<!--font from http://www.fontspace.com and posted by rayhan-->
 	<body>
 		<div id="displaydiv">
 			<p id='fps'>fps: 0.0</p>
