added menus and fixed balance
added character select as well as debugging various issues with the
shell menus.  Also improved softcoding in enemies and fixed various bugs
due to things not configuring correctly

--- a/game.html
+++ b/game.html
@@ -23,6 +23,10 @@
 		  font-family: 'Menu';
 		  src: url('resources/fonts/divlit.ttf');
 		}
+		@font-face {
+		  font-family: 'Score';
+		  src: url('resources/fonts/PressStart2P.ttf');
+		}
 	</style>
 	<!--font from http://www.fontspace.com and posted by rayhan-->
 	<body>
