--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
 		}
 		@font-face {
 		  font-family: 'Score';
-		  src: url('resources/fonts/PressStart2P.ttf');
+		  src: url('resources/fonts/MAG.ttf');
 		}
 	</style>
 	<!--font from http://www.fontspace.com and posted by rayhan-->
