--- a/game.html
+++ b/game.html
@@ -31,7 +31,7 @@
 	<!--font from http://www.fontspace.com and posted by rayhan-->
 	<body>
 		<div id="displaydiv">
-			<p id='fps'>fps: 0.0</p>
+			<p id='fps' style='position:fixed;left:10;top:0;z-index: 20;color:red'>fps: 0.0</p>
 			<canvas id="Display" width="640" height="480" style="border:1px solid #c3c3c3; z-index: 0;">
 			HTML5 Canvas is not supported
 			</canvas>
